--- a/q/275212.html
+++ b/q/275212.html
@@ -46,10 +46,11 @@
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=dZHBSsQwEIbxmqcYcmnS1qU5KYF9AE8-QFukbhIsdKchTQVZfBIvBdF30qNPYttsd1fZzRwymfm_-WHy9mlf_FOLw7tZFx-9N9e3XzdNtX1UFShJM5HRGhlDuVYrU6NitEDKecxUgnHIcykxEWWiAv599aO0gU2Lz9r5h6ZtmNed31Sd5pLAeJz2vUPI83hbWVajT92qs03tGeelaR04qBEWaNV5V1vG95LZsyTk1GNUXPA4DHHaNtVGMwo0pZQvQ5NpHCGT6SKdvHNKKclgH2cycSbLyEilcECJOCLH1mkx8CetOWaJmPnwviAQfwQkGqvReM0siCWdqqSUYN24aGaiO7S9lwXu_u_3tcAC73s_tWFn2NnlBlXEw1cPQ7h_AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Expects a single string consisting of newline-terminated lines of 0s and 1s.</p>
-<h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 65 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>lambda d:any((0,1,0)in[*zip(a,a[1:],a[2:])]for a in[*d,*zip(*d)])
+<h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <strike>65</strike> 62 bytes</h1>
+<h3>Thanks @att for -3.</h3>
+<pre class="lang-python prettyprint-override"><code>lambda d:any((0,1,0)in zip(a,a[1:],a[2:])for a in[*zip(*d)]+d)
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=dVFNSsQwFMZtTvHIpkmJQ-NKCi5cuvIAbZHYJljopCFNhXHwJG4KondS8C6mzXSmSieBvJf3_UHy9ml27qnVw7u6yT96py6vv24bsX2sBFSp0DtCEsZZQmudxS-1IYKJjKeFP6_SghaqtSBgBCs24XFFCxqMvi9-KqmgbPWztO6haRviZOdK0UmaIvDLStdbDVkWb4UhtXbMbjrT1I7QYG29NcyiTeesT6AHCs41pgVCywzPOJNxNLHSNKKUBANmGNPZFKExb2aNsRnGGCVw2CsdX-kS5FUMjlLET5ITtBwG_QKa9kThkz7czxD4HwKK_DTyZdICn9txiooUjPVvTFR0p03v0lzv_z_ta65zfd-7EYa9Iqt_F1jR4ZeHIdRf" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=dVHNSsQwEMZrnmLIpUmtS-NJCnr35AO0QWKbsIVuGtJUWBefxEtB9J0UfBfTv90q3QxkJjPfD0zePs3ebWvdvavb7KN16urm664Su6dCQJEIvSckjlgU01LDS2mIiETKEu7v64RTVVsQUOo07GdhQfllQUeV74ufQirIa_0srXus6oo42bhcNJImCPyx0rVWQ5qGO2FIqV1kN42pSkco5b2y9cowkzaNs96DThCcaUw5QksPjzjjcRSx0lQilwQDjjCmsyhCvd-M6m1TjDGKYYqViq1UMfKsCI5UxE6U02jZHPmL0RADhA388X0GwP4AUOC7gU8DF9hc9l3EEzDW75io4F6b1iWZPvxf7WumM_3Qun4MB0VW_25EBdMvd92YfwE" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Expects a list-of-lists of integers.</p>
 <p>Any similarities of test code with that of shape warrior t's are mere coincidence =-P</p>
 <h2>How?</h2>
