--- a/q/275210.html
+++ b/q/275210.html
@@ -26,10 +26,42 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>034</td><td>JavaScript ES6</td><td>240828T181212Z</td><td><a href="https://codegolf.stackexchange.com/questions/275210/parse-minecrafts-varint/275211#275211">Arnauld</a></td></tr>
-<tr d-ix="1"><td>015</td><td>Uiua</td><td>240828T194612Z</td><td><a href="https://codegolf.stackexchange.com/questions/275210/parse-minecrafts-varint/275217#275217">nyxbird</a></td></tr>
+<tr d-ix="0"><td>2112</td><td>05AB1E</td><td>240829T103540Z</td><td><a href="https://codegolf.stackexchange.com/questions/275210/parse-minecrafts-varint/275234#275234">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>034</td><td>JavaScript ES6</td><td>240828T181212Z</td><td><a href="https://codegolf.stackexchange.com/questions/275210/parse-minecrafts-varint/275211#275211">Arnauld</a></td></tr>
+<tr d-ix="2"><td>015</td><td>Uiua</td><td>240828T194612Z</td><td><a href="https://codegolf.stackexchange.com/questions/275210/parse-minecrafts-varint/275217#275217">nyxbird</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), <s> 35 </s> 34 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 21 (or 12) <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>η.Δθн_}€¦RJCDžI&amp;ĀžJ*-
+</code></pre>
+<p>Input as a list of binary-strings (e.g. example <code>0xdd,0xc7,0x01,0x47</code>. is input as <code>[&quot;11011101&quot;,&quot;11000111&quot;,&quot;00000001&quot;,&quot;01000111&quot;]</code>)</p>
+<p><a href="https://tio.run/##yy9OTMpM/f//3Ha9c1PO7biwN772UdOaQ8uCvJxdju7zVDvScHSfl5bu///RSoaGBoYgrKQDYhqAOECmAQSAmTDRWAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfeX/c9v1zk05t@PC3vjaR01rDi0L8nJ2ObrPU@1Iw9F9Xlq6/3X@R0crGRoaGIKwkg6IaQDiAJkGEABmwkRjdRSiYRIGEJ4hkjIUCZAGQxSjDMBMkE1wzfhthqqBm4PEhJuORw0OnQbIniFVJ5KdCE8RZIJ1IoIMw3QDWCAbYHUtUEopNhYA" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<p>Step 1: Main part of the challenge:</p>
+<pre class="lang-python prettyprint-override"><code>η          # Get the prefixes of the (implicit) input-list
+ .Δ        # Find the first prefix that's truthy for:
+   θ       #  Pop and leave the last string of the current prefix
+    н      #  Pop and leave its first bit
+     _     #  Check that it's 0
+  }€       # After the find_first: map over each prefix:
+    ¦      #  Remove its first bit
+     R     # Reverse this list of prefixes
+      J    # Join them together
+       C   # Convert it from a binary-string to a base-10 integer
+</code></pre>
+<p><a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfeX/c9v1zk05t@PC3vjaR01rDi0L8nL@r/M/OlrJ0NDAEISVdEBMAxAHyDSAADATJhqroxANkzCA8AyRlKFIgDQYohhlAGaCbIJrxm8zVA3cHCQm3HQ8anDoNED2DKk6kexEeIogE6wTEWQYphvAAtkAq2uBUkqxsQA" rel="nofollow noreferrer">Try just step 1 online for all test cases.</a></p>
+<p>Step 2: Convert the unsigned to signed 32-bit integers:</p>
+<pre class="lang-python prettyprint-override"><code>D          # Duplicate the current value
+   &amp;       # Bitwise-AND it with
+ žI        # constant value 2147483648
+    Ā      # Check whether this is NOT 0
+       *   # Multiply this 0 or 1 by
+     žJ    # constant value 4294967296
+        -  # Subtract that from the value of step 1
+           # (after which the result is output implicitly)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), <s> 35 </s> 34 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([v,...a])=&gt;v&amp;&amp;v^(v&amp;=128)|v*f(a)
 </code></pre>
@@ -49,7 +81,7 @@ v *        // ... v (which is now 0x00 or 0x80) multiplied by
 f(a)       // the result of a recursive call
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 15 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 15 bytes</h1>
 <pre><code>°⋯♭▽≤⊗0:°⊏≡⍜⇌°⊂
 </code></pre>
 <p>Takes input as an array of 8-bit bytes (lsb-first)</p>
