--- a/q/275212.html
+++ b/q/275212.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>073</td><td>JavaScript ES11</td><td>240828T205810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275219#275219">Arnauld</a></td></tr>
-<tr d-ix="1"><td>041</td><td>Ruby</td><td>240829T074827Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275231#275231">G B</a></td></tr>
-<tr d-ix="2"><td>055</td><td>Python</td><td>240828T210306Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275220#275220">Albert.L</a></td></tr>
-<tr d-ix="3"><td>129</td><td>Scala 3</td><td>240829T045624Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275228#275228">138 Aspe</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>Scala 3</td><td>240829T045624Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275228#275228">138 Aspe</a></td></tr>
+<tr d-ix="1"><td>073</td><td>JavaScript ES11</td><td>240828T205810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275219#275219">Arnauld</a></td></tr>
+<tr d-ix="2"><td>041</td><td>Ruby</td><td>240829T074827Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275231#275231">G B</a></td></tr>
+<tr d-ix="3"><td>055</td><td>Python</td><td>240828T210306Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275220#275220">Albert.L</a></td></tr>
 <tr d-ix="4"><td>015</td><td>APLDyalog Unicode</td><td>240829T025859Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275227#275227">akamayu</a></td></tr>
 <tr d-ix="5"><td>007</td><td>Nekomata + e</td><td>240829T014044Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275226#275226">alephalp</a></td></tr>
 <tr d-ix="6"><td>052</td><td>JavaScript Node.js</td><td>240829T012128Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275225#275225">l4m2</a></td></tr>
@@ -41,38 +41,11 @@
 <tr d-ix="12"><td>009</td><td>Stax</td><td>240828T193443Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275216#275216">Khuldrae</a></td></tr>
 <tr d-ix="13"><td>028</td><td>Wolfram Language Mathematica</td><td>240828T191925Z</td><td><a href="https://codegolf.stackexchange.com/questions/275212/stuck-on-sokoban/275215#275215">att</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES11), 73 bytes</h1>
-<p><em>-2 thanks to <a href="https://codegolf.stackexchange.com/users/123885/shape-warrior-t">shape warrior t</a></em></p>
-<p>Expects a binary matrix (1 for empty, 0 for filled) and returns a Boolean value.</p>
-<pre class="lang-javascript prettyprint-override"><code>m=&gt;m.some((r,y)=&gt;r.some((v,x)=&gt;v&amp;&amp;r[x+1]&lt;r[x+2]|m[y+1]?.[x]&lt;m[y+2]?.[x]))
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGiNNulpSVpuhY3PXNt7XL1ivNzUzU0inQqNW3tiqC8Mp0KIK9MTa0oukLbMNYGRBnF1uRGVwJ59nrRFbE2ILYRhK2pCTHwFpNTcn5ecX5Oql5OfrpGmkY0l4JCtIKhDhJSiNUhTtCAaEGgdi6gGxT09RXSEnOKU7m48LgCZoABVpsRJpUUleIwCJdOZK4BUU4CmgRFqK4yQHUnXA1RbsNlogE-E_E7kugANkD3PG6XGsJcgW44JCktWAChAQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 41 bytes</h1>
-
-<pre class="lang-ruby prettyprint-override"><code>-&gt;s{(s+s.transpose).any?{|l|/010/=~l*''}}
-</code></pre>
-<p><a href="https://tio.run/##KypNqvyfZvtf1664WqNYu1ivpCgxr7ggvzhVUy8xr9K@uianRt/A0EDfti5HS129tvZ/gUJatI2Nq5@LXk5mXmqxXm5igYaaVXFBTmaJZiyXgQIUYmEZYmEZcAFN4iLCTC5DhFlE6EFWDbGRGD1gCNZrCLYRwidVpyFJOokLAUMi/QC2H2LmfwA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <strike>53</strike> 55 bytes</h1>
-<h3>Thanks @att for finding a bug (+2).</h3>
-<pre class="lang-python prettyprint-override"><code>lambda d:&quot;010&quot;in((n:=d.find(&quot;\n&quot;))*(d+n*&quot;\n&quot;))[::n+1]+d
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=dZHBSsQwEIbxmqcYcmnS1qU5KYF9AE8-QFukbhIsdKchTQVZfBIvBdF30qNPYttsd1fZzRwymfm_-WHy9mlf_FOLw7tZFx-9N9e3XzdNtX1UFShJM5HRGhlDuVYrU6NitEDKecxUgnHIcykxEWWiAv599aO0gU2Lz9r5h6ZtmNed31Sd5pLAeJz2vUPI83hbWVajT92qs03tGeelaR04qBEWaNV5V1vG95LZsyTk1GNUXPA4DHHaNtVGMwo0pZQvQ5NpHCGT6SKdvHNKKclgH2cycSbLyEilcECJOCLH1mkx8CetOWaJmPnwviAQfwQkGqvReM0siCWdqqSUYN24aGaiO7S9lwXu_u_3tcAC73s_tWFn2NnlBlXEw1cPQ7h_AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Expects a single string consisting of newline-terminated lines of 0s and 1s.</p>
-<h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <strike>65</strike> 62 bytes</h1>
-<h3>Thanks @att for -3.</h3>
-<pre class="lang-python prettyprint-override"><code>lambda d:any((0,1,0)in zip(a,a[1:],a[2:])for a in[*zip(*d)]+d)
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=dVHNSsQwEMZrnmLIpUmtS-NJCnr35AO0QWKbsIVuGtJUWBefxEtB9J0UfBfTv90q3QxkJjPfD0zePs3ebWvdvavb7KN16urm664Su6dCQJEIvSckjlgU01LDS2mIiETKEu7v64RTVVsQUOo07GdhQfllQUeV74ufQirIa_0srXus6oo42bhcNJImCPyx0rVWQ5qGO2FIqV1kN42pSkco5b2y9cowkzaNs96DThCcaUw5QksPjzjjcRSx0lQilwQDjjCmsyhCvd-M6m1TjDGKYYqViq1UMfKsCI5UxE6U02jZHPmL0RADhA388X0GwP4AUOC7gU8DF9hc9l3EEzDW75io4F6b1iWZPvxf7WumM_3Qun4MB0VW_25EBdMvd92YfwE" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Expects a list-of-lists of integers.</p>
-<p>Any similarities of test code with that of shape warrior t's are mere coincidence =-P</p>
-<h2>How?</h2>
-<p>Essentially an exercise in performing the transpose.</p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 129 bytes</h1>
-<p>Golfed version. <a href="https://ato.pxeger.com/run?1=jVRPb9MwFD9wy6d4itBkiyRqxmWq2khM4lCJCSSEODQ9mNRNzVInit0toYsmPgeXXeCyTzQ-Dc_5t3SjlFiyf89-v-f3z_nxS0UsYa_v57Yr02uWS3vxcJ5--cojDRdMSNhZ1hVLIFrz6PID05rncown2ZzMpHYAJ1rPC5gGcJ6mCWcSpj-3euWePXyPp0HsXfJSebwQSqtdxBQnhVPSaUCKwD85iUkt0sAA1zew2WzwpIanBtKbG1I-ozil63eUBk9aeIqUqnHk94tbgCVfQZTKK55rornSxpUxfNS5kDE9FBPGD_iZFOTptcKNjuopZGYXLI-F9BBuPJUlQhM7lDatSWSV5i0fBaQ7UFKYuLUl75vIPgu9nsklL1odsTJHjTGZyrebTJcdPVqz3IGi4-_fGKpXNn1usYJS8GQJmA5zsxsA8cEFY8rTqQmT4oqBo3ZlWU2KNlh1glGpMbzJc1bOmwwtMEWfpNB7KelyYfLyDutLWm9t227RqBtHZP-IPHq07Pz9khb7T43_i3hIeejBAWI9Bmb8gQfDs_-m-0fpqPcojBra_obRqGVq1YtpwL7XTef0BaN9Y2ZYXZ1IouyZzLZ6HMpm_-Wu73TTa1UoQ_l-q40Kng3_B-Tpq8J31z-Cqu6t9h3e3TXrHw" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<pre class="lang-scala prettyprint-override"><code>g=&gt;g.keys.exists{case(x,y)=&gt;(x&gt;1&amp;&amp;g((x,y))&gt;g((x-1,y))&amp;&amp;g((x-1,y))&lt;g((x-2,y)))||(y&gt;1&amp;&amp;g((x,y))&gt;g((x,y-1))&amp;&amp;g((x,y-1))&lt;g((x,y-2)))}
+<div id="pu0" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, <del>129</del> 101 bytes</h1>
+<p>Saved 28 bytes thanks to @shape warrior t</p>
+<hr />
+<p>Golfed version. <a href="https://ato.pxeger.com/run?1=jVPNbtNAED5w81OMLFTtgm3F7QVFxBKVOESiAgkhDnEOi7Nxljpra3fTxqQWD8KlF7j0icrTMOu_Oi0heCXvzM588z8_fumEZezsbub6Mr9mSrrz-_P8y1eeGLhgQsLOca5YBsmKJ5cfmDFcyTFKihmZSuMB_mj9n8MkgvM8zziTMPm5MUv_1T1PJ1EaXPJSB3wrtNG7hGlOtl5JJ9E2Ck9OUlJz9IUl_FNLRjUZWvLmpnyi5JX-aauEZEhp1Tj7_ew7wIIvIcnlFVeGGK6NdTeGj0YJmdJDcWOOgJ9NU-XXGh86aKARWVwwlQoZILkOdJEJQ9xYurQGkWWuWjwyCPegpPDary0F30TxWZjVVC74ttURSytqjMlcvl0XpuzgyYopD7Ydft9jrF-69KnFCkrBswVgNaxnPwISgg_WVGBymybFGxNH7cpxmhKtsbMEs9JjeKMUK2dNheZYok9SmL2SdLWwdXmHPSRttK7rttSoO0f48Ag_erDs_d1JS4ePjf8LeEh5GMEBYH0GZsJBBEPZf8PDo3DUe2BGDWz_wWrUPHXqyw5gP-t2cvqG0X4wC-yuySTR7lQWGzOOZfP-fNdPup21KpaxfL8xVgVlw50nj7cK965fgqqerXYPb2-b-w8" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre class="lang-scala prettyprint-override"><code>g=&gt;g.keys.exists{case(x,y)=&gt;x&gt;1&amp;&amp;g((x,y))*g((x-2,y))&gt;g((x-1,y))||y&gt;1&amp;&amp;g((x,y))*g((x,y-2))&gt;g((x,y-1))}
 </code></pre>
 <p>Ungolfed version. <a href="https://ato.pxeger.com/run?1=jVTBbtswDL3slK8gjKKQsMSIu8tgZAVWYIcAKzZgGHqod9AcOdHqyIZEd_EKf8kuvbQfta_YJ0yypdju2qYwIIuPfKREUvx9r1OWsze3t3cVZrO3f179Lb7_4CnCORMSbiYAK55BuuHp1WeGyJUkayVWsdGXl2QpcQpmoe36jcZwVhQ5ZxLetVyArFBAyG4KNYXFDCw3vOK1pk4PIDIgOziFCI6PW70zpwZzIswg6qDepMcWA-ikhXrnAIpjpSSgqrjDmkHg-vnARrRxRoF7bDGGTl4WuFszlmuLNxOf4kJec4UEucaUaR7DF1RCrunjqd4n-JrloIqf2gCeGmrDLM-ZWgsZmu021GUukASJDGhLIrYs_qjE0H19rKfwlygvBG6WcsV3fa6MqnMmC_lhW2Lt6emGqSnsPH8cMdGvA_q_xwZqwfMVuM6YnQKJTAqtqxALe01q_ubiwxRtTUsScysdw3ulWH3ZZci23VcpcJQSnwubl49CI3GnDYLA7eb-OyBHB-R573n6eBC3jx46f474lPHwBE8Q22_gJhqcYKh7MT06SDd2vTDvaGPAWrQynfRzwRfJds6-YP0bKk11MZdEB0tZVhgnssOPbvadbnutSWQiP1VoTYxuNKsevipKm_0jaNrearrB5-afn4P_AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <pre class="lang-scala prettyprint-override"><code>object Main {
@@ -137,6 +110,35 @@
   }
 }
 </code></pre>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES11), 73 bytes</h1>
+<p><em>-2 thanks to <a href="https://codegolf.stackexchange.com/users/123885/shape-warrior-t">shape warrior t</a></em></p>
+<p>Expects a binary matrix (1 for empty, 0 for filled) and returns a Boolean value.</p>
+<pre class="lang-javascript prettyprint-override"><code>m=&gt;m.some((r,y)=&gt;r.some((v,x)=&gt;v&amp;&amp;r[x+1]&lt;r[x+2]|m[y+1]?.[x]&lt;m[y+2]?.[x]))
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGiNNulpSVpuhY3PXNt7XL1ivNzUzU0inQqNW3tiqC8Mp0KIK9MTa0oukLbMNYGRBnF1uRGVwJ59nrRFbE2ILYRhK2pCTHwFpNTcn5ecX5Oql5OfrpGmkY0l4JCtIKhDhJSiNUhTtCAaEGgdi6gGxT09RXSEnOKU7m48LgCZoABVpsRJpUUleIwCJdOZK4BUU4CmgRFqK4yQHUnXA1RbsNlogE-E_E7kugANkD3PG6XGsJcgW44JCktWAChAQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 41 bytes</h1>
+
+<pre class="lang-ruby prettyprint-override"><code>-&gt;s{(s+s.transpose).any?{|l|/010/=~l*''}}
+</code></pre>
+<p><a href="https://tio.run/##KypNqvyfZvtf1664WqNYu1ivpCgxr7ggvzhVUy8xr9K@uianRt/A0EDfti5HS129tvZ/gUJatI2Nq5@LXk5mXmqxXm5igYaaVXFBTmaJZiyXgQIUYmEZYmEZcAFN4iLCTC5DhFlE6EFWDbGRGD1gCNZrCLYRwidVpyFJOokLAUMi/QC2H2LmfwA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <strike>53</strike> 55 bytes</h1>
+<h3>Thanks @att for finding a bug (+2).</h3>
+<pre class="lang-python prettyprint-override"><code>lambda d:&quot;010&quot;in((n:=d.find(&quot;\n&quot;))*(d+n*&quot;\n&quot;))[::n+1]+d
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=dZHBSsQwEIbxmqcYcmnS1qU5KYF9AE8-QFukbhIsdKchTQVZfBIvBdF30qNPYttsd1fZzRwymfm_-WHy9mlf_FOLw7tZFx-9N9e3XzdNtX1UFShJM5HRGhlDuVYrU6NitEDKecxUgnHIcykxEWWiAv599aO0gU2Lz9r5h6ZtmNed31Sd5pLAeJz2vUPI83hbWVajT92qs03tGeelaR04qBEWaNV5V1vG95LZsyTk1GNUXPA4DHHaNtVGMwo0pZQvQ5NpHCGT6SKdvHNKKclgH2cycSbLyEilcECJOCLH1mkx8CetOWaJmPnwviAQfwQkGqvReM0siCWdqqSUYN24aGaiO7S9lwXu_u_3tcAC73s_tWFn2NnlBlXEw1cPQ7h_AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Expects a single string consisting of newline-terminated lines of 0s and 1s.</p>
+<h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <strike>65</strike> 62 bytes</h1>
+<h3>Thanks @att for -3.</h3>
+<pre class="lang-python prettyprint-override"><code>lambda d:any((0,1,0)in zip(a,a[1:],a[2:])for a in[*zip(*d)]+d)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=dVHNSsQwEMZrnmLIpUmtS-NJCnr35AO0QWKbsIVuGtJUWBefxEtB9J0UfBfTv90q3QxkJjPfD0zePs3ebWvdvavb7KN16urm664Su6dCQJEIvSckjlgU01LDS2mIiETKEu7v64RTVVsQUOo07GdhQfllQUeV74ufQirIa_0srXus6oo42bhcNJImCPyx0rVWQ5qGO2FIqV1kN42pSkco5b2y9cowkzaNs96DThCcaUw5QksPjzjjcRSx0lQilwQDjjCmsyhCvd-M6m1TjDGKYYqViq1UMfKsCI5UxE6U02jZHPmL0RADhA388X0GwP4AUOC7gU8DF9hc9l3EEzDW75io4F6b1iWZPvxf7WumM_3Qun4MB0VW_25EBdMvd92YfwE" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Expects a list-of-lists of integers.</p>
+<p>Any similarities of test code with that of shape warrior t's are mere coincidence =-P</p>
+<h2>How?</h2>
+<p>Essentially an exercise in performing the transpose.</p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>15 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>A 3-train that checks if <code>0 1 0</code> is a substring of any row or column.</p>
