--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240829T172533Z
+"   /golfscore                                      20240829T174034Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/40376.html">Evolution of Hello World!                       : 0040376</a>
+<a href="q/229445.html">But Is It Art?                                  : 0229445</a>
 <a href="q/17294.html">Golfing A Weasel Program                        : 0017294</a>
 <a href="q/275241.html">Encode a VarInt                                 : 0275241</a>
 <a href="q/275212.html">Stuck on Sokoban                                : 0275212</a>
