--- a/q/51003.html
+++ b/q/51003.html
@@ -26,61 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>nan</td><td>Scala 3</td><td>240818T031015Z</td><td><a href="https://codegolf.stackexchange.com/questions/51003/chinese-checkerboard/275039#275039">138 Aspe</a></td></tr>
-<tr d-ix="1"><td>760</td><td>tinylisp</td><td>240817T205716Z</td><td><a href="https://codegolf.stackexchange.com/questions/51003/chinese-checkerboard/275031#275031">Andrew B</a></td></tr>
+<tr d-ix="0"><td>683</td><td>tinylisp</td><td>240817T205716Z</td><td><a href="https://codegolf.stackexchange.com/questions/51003/chinese-checkerboard/275031#275031">Andrew B</a></td></tr>
+<tr d-ix="1"><td>nan</td><td>Scala 3</td><td>240818T031015Z</td><td><a href="https://codegolf.stackexchange.com/questions/51003/chinese-checkerboard/275039#275039">138 Aspe</a></td></tr>
 <tr d-ix="2"><td>127</td><td>Ruby</td><td>160905T014124Z</td><td><a href="https://codegolf.stackexchange.com/questions/51003/chinese-checkerboard/92261#92261">Level Ri</a></td></tr>
 <tr d-ix="3"><td>228</td><td>JavaScript ES6</td><td>150530T151227Z</td><td><a href="https://codegolf.stackexchange.com/questions/51003/chinese-checkerboard/51038#51038">edc65</a></td></tr>
 <tr d-ix="4"><td>140</td><td>Python 2</td><td>150530T090056Z</td><td><a href="https://codegolf.stackexchange.com/questions/51003/chinese-checkerboard/51021#51021">Sp3000</a></td></tr>
 <tr d-ix="5"><td>234</td><td>Retina</td><td>150530T114326Z</td><td><a href="https://codegolf.stackexchange.com/questions/51003/chinese-checkerboard/51027#51027">randomra</a></td></tr>
 <tr d-ix="6"><td>152</td><td>Python 2</td><td>150530T080010Z</td><td><a href="https://codegolf.stackexchange.com/questions/51003/chinese-checkerboard/51018#51018">xnor</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, <del>263</del> 251 bytes</h1>
-<p>Saved 12 bytes thanks to @DLosc</p>
-<hr />
-<p>Golfed version. <a href="https://ato.pxeger.com/run?1=XZDBSsNAEIbveYohl51pSKwtiAQ2UC_iQRTFg9QetjWpm2w2JVkVDXkSL73opU_UZ_HiZqNQvOwPP9_8M_t_fDUrocR0N_dDXb2KWvuLPVbLPF0ZuBRSQ-t5AC9CQRYDXmhDPLk1tdRr4PD5bLLwdP-teYLhZKTBVGCFolJsWskTr5_LeSnMUySWDUpyTsFlhnmiaQypalLInas4zupavEWZVAoLQgvJZEzsmvUUO2MUBAeEXRQch7nj-rD2j78Z-HPWOY3-zR0kXzF3ALtnZG8uhn-hDz559hkhnrgdKmrke0pHEwpUd8A9aJ9-K5gBPKYZlLYxFPW6icFtnA_ogmK409LYylrbJsDGukZpzHBKZJ3O64ag7XbQHw" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<pre class="lang-scala prettyprint-override"><code>n=&gt;(-2*n to 2*n).map{i=&gt;
-val j=math.abs(i)
-val k=if(j&gt;n)0 else j
-val l=(Array.fill(k)(if(i&gt;0)'P'else'B')++Array.fill(2*n+1-j)(if(j&gt;n){if(i&gt;0)'R'else'G'}else'.')++Array.fill(k)(if(i&gt;0)'O' else'Y')).mkString(&quot; &quot;)
-&quot; &quot;*((6*n+1-l.size)/2)+l}.mkString(&quot;\n&quot;)
-</code></pre>
-<p>Ungolfed version. <a href="https://ato.pxeger.com/run?1=dVPBTtwwFDz0xleMconNsoEuEqpWAqn0gFqpWkTFAVEOJnE2znqdKDbdVqv9kl64tBf-qF_TF9uBpepeEut5PDPvefzzt82FFsdPt8nYNCvRmeTu8deDK8fv_rz53tzXMnf4LJTBeg8oZImSmSk-Gsen-OI6ZeY49XvAN6HRSfugHZXYeIJ9GLgGfsGzpWixhsLpmUcHfE3QpXBVJu4tU3xrZ0E7qgSrcUancQSprUS9twXRysheKpaA910nfmSl0potOOtPKzp9xJFepuF8ep5yjEbA4SHO0XS4JMutFE4WpOjUUtr_sYVeRniLMerAHH2tsS1zNchcpNjEZRYUSfDqABcHvWj2Isom-y_Euw38085s0LkhcvhuZj3xza5uaPyLcF0sQcKHKfYTzHJpnOzYydAj7-k--CJcJcOYV8pVlAJBi8JVaEqcRON5JTqREzhobQJ3CMKW6leTeOJPTU-j9TO19dwwcuWFXtF5MrVstcqVQ66FtTF1s9Yy67ohhDxmsE9o7Mcb3RHVkJ9WFEWoBjDdAVFmWpq5q8gsJhFMI6PhDPBRj6Lvq2rsPVrubSzp1TDRze00XORt8HBHbq6Ncs9eWqo6bVjJjjn3BJvwAOM7fIz_vw" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<pre class="lang-scala prettyprint-override"><code>object Main {
-  def f(n: Int): String = {
-    val result = (-2 * n to 2 * n).map { i =&gt;
-      val j = math.abs(i)
-      val k = if (j &gt; n) 0 else j
-
-      val line = (
-        Array.fill(k)(if (i &gt; 0) 'P' else 'B') ++  // B or P repeated k times
-        Array.fill(2 * n + 1 - j)(if (j &gt; n) { if (i &gt; 0) 'R' else 'G' } else '.') ++ // R, G, or . repeated (2*n + 1 - j) times
-        Array.fill(k)(if (i &gt; 0) 'O' else 'Y')    // O or Y repeated k times
-      ).mkString(&quot; &quot;)
-
-      line.center(6 * n + 1) // Center the line within a width of 6*n + 1 characters
-    }
-
-    result.mkString(&quot;\n&quot;) // Join all the lines with newline characters
-  }
-
-  implicit class StringOps(str: String) {
-    def center(width: Int): String = {
-      val padding = (width - str.length) / 2
-      &quot; &quot; * padding + str + &quot; &quot; * padding
-    }
-  }
-
-  def main(args: Array[String]): Unit = {
-    println(f(3))
-  }
-}
-</code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/tinylisp" rel="nofollow noreferrer">tinylisp</a>, 760 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/tinylisp" rel="nofollow noreferrer">tinylisp</a>, <s> 760 </s> 683 bytes</h1>
 <pre><code>
-(d R(q((n A)(i(e n 0)()(J A(L(R(s n 1)A)()))))))(d L(q((A B)(i(e A ())B(L(t A)(c(h A)B))))))(d K(q((A B)(i(e A())B(K(t A)(L(h A)B))))))(d J(q(args(K args()))))(d P(q((A B)(s A(s 0 B)))))(d X(q((n B x)(i(e n 0)x(X(s n 1)B(L(J(R(s B n)(q(32)))(R n(q(32 80)))(R(P B(s B n))(q(32 46)))(q(46))(R n(q(79 32)))(q(10))x)()))))))(d W(q((n B x)(i(e n 0)x(W(s n 1)B(L(J(R(s n 1)(q(32)))(R(s(P B 1)n)(q(32 66)))(R(P n(s B 1))(q(32 46)))(q(46))(R(P(s B n)1)(q(89 32)))(q(10))x)()))))))(d Y(q((n B x)(i(e n 0)x(Y(s n 1)B(L(J(R(P B B)(q(32)))(R(s n 1)(q(32)))(R(P(s B n)1)(q (82 32)))(i(e n B)()(q (10)))x)()))))))(d Z(q((n B x)(i(e n 0)x(Z(s n 1)B(L(J(R(P B B)(q(32)))(R(s B n)(q(32)))(R n(q(71 32)))(q (10))x)()))))))(d k(q((n)(string(Z n n(W(P n 1)n(X n n(Y n n()))))))))
+(d R(q((n A)(i n(J A(L(R(s n 1)A)()))(
+(d L(q((A B)(i A(L(t A)(c(h A)B))B
+(d K(q((A B)(i A(K(t A)(L(h A)B))B
+(d J(q(args(K args(
+(d P(q((A B)(s A(s 0 B
+(d X(q((n B x)(i n(X(s n 1)B(L(J(R(s B n)(q(32)))(R n(q(32 80)))(R(P B(s B n))(q(32 46)))(q(46))(R n(q(79 32)))(q(10))x)()))x
+(d W(q((n B x)(i n(W(s n 1)B(L(J(R(s n 1)(q(32)))(R(s(P B 1)n)(q(32 66)))(R(P n(s B 1))(q(32 46)))(q(46))(R(P(s B n)1)(q(89 32)))(q(10))x)()))x
+(d Y(q((n B x)(i n(Y(s n 1)B(L(J(R(P B B)(q(32)))(R(s n 1)(q(32)))(R(P(s B n)1)(q(82 32)))(i(e n B)()(q(10)))x)()))x
+(d Z(q((n B x)(i n(Z(s n 1)B(L(J(R(P B B)(q(32)))(R(s B n)(q(32)))(R n(q(71 32)))(q (10))x)()))x
+(d k(q((n)(string(Z n n(W(P n 1)n(X n n(Y n n(
 </code></pre>
-<p><a href="https://tio.run/##hZIxb4MwEIX3/oobnzdII0JHPAIDYgmwVW2VolRWEzPQX0/PZ5OEBLUeOPv8fO8746E3P1@9/Z6mJ7xTjRNgKFPo8UGGIgWFnDKUqGE5ESveU36wvnT6jLTXZ8RbmrWDq/CGTw76oi2WWpEWXlreSXOWvp4PFgVJmPPVpYTlApYi0vNW48k1jVf2EU2AdlC5tKDJKJY@b9yxmozMKY1kiYp00HgRbRMlUxeDfPdC/vQJMR8bb@9jv0qxf6BwqysFrDPmVECjJJlxjODE6zioAqwUS//gale52jsuB6EXXPegt4aEdBMcfUntHgunnfvSvlu17/63X/lbu3hukx77PIoRP4/h3JsDOq5v@Por8TFoZN3KV81jwpG2avoF" rel="nofollow noreferrer" title="tinylisp – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##hZGxcoMwDIb3PoVGaQtpjqQjHoGBY0lg67W91Jeer4kZ6NMTSTZpcdPrgmzdJ/@f8WDd14f1n9P0gK/Q4hnRQUFowWEJBdbYogcHGXGTiFCwWrACjGCCDDLxgu9cDJERpFogVUDqBVIy8nw5eqxAi/Sa25jnMQ8rUPQQvAyMwewQnQwfWaqhAUcMPa7FsWVE1rBb6RYbMJEJEGxy0qXUiG@fIEyfMeOxUa87Svo@Sd//Spfddzp6CeRWVII8nzWcamT3NbCJknrY7k@fLvHpEh8JNwufVHAZtI5BFt8Y5Mk582don4T2/4feeZNtNl8K0ludNIAffrhYd8SeT5df3WgKP7nuO/1OeILNdAU" rel="nofollow noreferrer" title="tinylisp – Try It Online">Try it online!</a></p>
 <p>Partially ungolfed version:</p>
 <pre><code>
 (d R
@@ -209,6 +176,48 @@ val l=(Array.fill(k)(if(i&gt;0)'P'else'B')++Array.fill(2*n+1-j)(if(j&gt;n){if(i&
 <h2>Approach</h2>
 <p>For this challenge, I broke the board into 4 sections, and wrote a function for each section - that's the functions Z W X &amp; Y. I also wrote some helper functions for joining together strings of chars.</p>
 <p>Perhaps there is a golfing opportunity still - the two halves of the board are sufficiently similar that I may be able to achieve the same result with 2 functions instead of 4, adding a parameter that tells me if I'm drawing the upper or lower section.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, <del>263</del> 251 bytes</h1>
+<p>Saved 12 bytes thanks to @DLosc</p>
+<hr />
+<p>Golfed version. <a href="https://ato.pxeger.com/run?1=XZDBSsNAEIbveYohl51pSKwtiAQ2UC_iQRTFg9QetjWpm2w2JVkVDXkSL73opU_UZ_HiZqNQvOwPP9_8M_t_fDUrocR0N_dDXb2KWvuLPVbLPF0ZuBRSQ-t5AC9CQRYDXmhDPLk1tdRr4PD5bLLwdP-teYLhZKTBVGCFolJsWskTr5_LeSnMUySWDUpyTsFlhnmiaQypalLInas4zupavEWZVAoLQgvJZEzsmvUUO2MUBAeEXRQch7nj-rD2j78Z-HPWOY3-zR0kXzF3ALtnZG8uhn-hDz559hkhnrgdKmrke0pHEwpUd8A9aJ9-K5gBPKYZlLYxFPW6icFtnA_ogmK409LYylrbJsDGukZpzHBKZJ3O64ag7XbQHw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre class="lang-scala prettyprint-override"><code>n=&gt;(-2*n to 2*n).map{i=&gt;
+val j=math.abs(i)
+val k=if(j&gt;n)0 else j
+val l=(Array.fill(k)(if(i&gt;0)'P'else'B')++Array.fill(2*n+1-j)(if(j&gt;n){if(i&gt;0)'R'else'G'}else'.')++Array.fill(k)(if(i&gt;0)'O' else'Y')).mkString(&quot; &quot;)
+&quot; &quot;*((6*n+1-l.size)/2)+l}.mkString(&quot;\n&quot;)
+</code></pre>
+<p>Ungolfed version. <a href="https://ato.pxeger.com/run?1=dVPBTtwwFDz0xleMconNsoEuEqpWAqn0gFqpWkTFAVEOJnE2znqdKDbdVqv9kl64tBf-qF_TF9uBpepeEut5PDPvefzzt82FFsdPt8nYNCvRmeTu8deDK8fv_rz53tzXMnf4LJTBeg8oZImSmSk-Gsen-OI6ZeY49XvAN6HRSfugHZXYeIJ9GLgGfsGzpWixhsLpmUcHfE3QpXBVJu4tU3xrZ0E7qgSrcUancQSprUS9twXRysheKpaA910nfmSl0potOOtPKzp9xJFepuF8ep5yjEbA4SHO0XS4JMutFE4WpOjUUtr_sYVeRniLMerAHH2tsS1zNchcpNjEZRYUSfDqABcHvWj2Isom-y_Euw38085s0LkhcvhuZj3xza5uaPyLcF0sQcKHKfYTzHJpnOzYydAj7-k--CJcJcOYV8pVlAJBi8JVaEqcRON5JTqREzhobQJ3CMKW6leTeOJPTU-j9TO19dwwcuWFXtF5MrVstcqVQ66FtTF1s9Yy67ohhDxmsE9o7Mcb3RHVkJ9WFEWoBjDdAVFmWpq5q8gsJhFMI6PhDPBRj6Lvq2rsPVrubSzp1TDRze00XORt8HBHbq6Ncs9eWqo6bVjJjjn3BJvwAOM7fIz_vw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre class="lang-scala prettyprint-override"><code>object Main {
+  def f(n: Int): String = {
+    val result = (-2 * n to 2 * n).map { i =&gt;
+      val j = math.abs(i)
+      val k = if (j &gt; n) 0 else j
+
+      val line = (
+        Array.fill(k)(if (i &gt; 0) 'P' else 'B') ++  // B or P repeated k times
+        Array.fill(2 * n + 1 - j)(if (j &gt; n) { if (i &gt; 0) 'R' else 'G' } else '.') ++ // R, G, or . repeated (2*n + 1 - j) times
+        Array.fill(k)(if (i &gt; 0) 'O' else 'Y')    // O or Y repeated k times
+      ).mkString(&quot; &quot;)
+
+      line.center(6 * n + 1) // Center the line within a width of 6*n + 1 characters
+    }
+
+    result.mkString(&quot;\n&quot;) // Join all the lines with newline characters
+  }
+
+  implicit class StringOps(str: String) {
+    def center(width: Int): String = {
+      val padding = (width - str.length) / 2
+      &quot; &quot; * padding + str + &quot; &quot; * padding
+    }
+  }
+
+  def main(args: Array[String]): Unit = {
+    println(f(3))
+  }
+}
+</code></pre>
 </div>
 <div id="pu2" class="pu"><h1>Ruby, <s>141</s> 127</h1>
 <p>Returns a rectangular string</p>
