--- a/q/275241.html
+++ b/q/275241.html
@@ -26,9 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>037</td><td>JavaScript ES6</td><td>240829T171331Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275242#275242">Arnauld</a></td></tr>
+<tr d-ix="0"><td>062</td><td>C gcc</td><td>240829T203006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275246#275246">jdt</a></td></tr>
+<tr d-ix="1"><td>037</td><td>JavaScript ES6</td><td>240829T171331Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275242#275242">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 62 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>v;f(unsigned n){v=n&gt;&gt;7;printf(&quot;%02X &quot;,v?n&amp;127|128:n);v&amp;&amp;f(v);}
+</code></pre>
+<p><a href="https://tio.run/##bY9hb4MgEIa/91dcSGZg1UxQix2z@xtLln5orBiSDZuiLpnzr4@d1vppFwLcc/e@HGVUl6X3vdK0s87UtjqDZUNf2MNBqsvV2FZT8hCLNyBh/2oDLuQPF/mzZaoPAk17pkaPXfB5MpYyGDaAMYG2cq17P0IBA8QhcFxChiCybJfhEe8lzxAKnso0T3Yp1iLMoxXkqOA82ecJjGq1LZsO9wKc@a4aTedXGDzd88cbuPXr5gp0EpkiVmBeZi1ettv7oFOsvzyjLQmXwc1xMZmN6D/w0rWOErKQcTP631J/nGrno68/" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
 <p>Expects an integer and returns an array of bytes.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&gt;&gt;7?[n&amp;127|128,...f(n&gt;&gt;&gt;7)]:[n]
