--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240829T233657Z
+"   /golfscore                                      20240830T003510Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/258992.html">Guessing on straws                              : 0258992</a>
 <a href="q/17294.html">Golfing A Weasel Program                        : 0017294</a>
 <a href="q/275241.html">Encode a VarInt                                 : 0275241</a>
 <a href="q/275210.html">Parse Minecrafts VarInt                         : 0275210</a>
