--- a/q/258992.html
+++ b/q/258992.html
@@ -41,6 +41,7 @@
 <pre class="lang-javascript prettyprint-override"><code>f=(x,i=k=0)=&gt;!x[k++]|x.some(([a,b],j)=&gt;a==i|b==i&amp;&amp;f(x[j]=x,a^b^i))
 </code></pre>
 <p><a href="https://tio.run/##lU5LCoMwEN33FNONJDiV2NS6Si8SIkSrJf5SailZeHcbsKibFgrD8HjzPlPrlx6Kh7k/D729llMl/BCHRjSCUXHZO9mEoRpdNNiuJERqzBXW/qKFMGPuVxBUxMlaCYc6yzND6VTYfrBtGbX2RioiQQJDiEGhRzECAwWK0t0v2RGBbw0r993KF9kawpYQ/ldrgnCa0RkhnVG6/eTj4FtdMldMbw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Start from 0, go through all nodes(<code>x[j]=x</code> cuts the edge), and decide if it went through N edges</p>
 </div>
 <div id="pu1" class="pu"><h1>Python3, 213 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>def f(t,b):
