--- a/q/275212.html
+++ b/q/275212.html
@@ -50,7 +50,7 @@
 s/f./f/g
 ta
 </code></pre>
-<p><a href="https://sed.js.org/?snippet=nE6jqA" rel="nofollow noreferrer">Live Editor</a>. Run using <code>gsed -zEf &lt;program&gt;</code>. The program itself is 51 bytes; adding 2 bytes for options <code>zE</code>. Reads input of form</p>
+<p><a href="https://sed.js.org/?snippet=nE6jqA" rel="nofollow noreferrer">Online Editor</a>. Run using <code>gsed -zEf &lt;program&gt;</code>. The program itself is 51 bytes; adding 2 bytes for options <code>zE</code>. Reads input of form</p>
 <pre><code>000
 111
 000
@@ -63,7 +63,7 @@ ta
 <li><code>/010|f0[01]*f1[01]*f0/</code> tests if any row or first column contains sequence <code>010</code>
 <ul>
 <li>On match, <code>ct</code> replaces pattern with <code>t</code>. Following substitution then fails and program exits</li>
-<li>On failure, <code>s/f./f/g</code> removes the first column and we try the match again. When no data remaining, this substitution then removes the extra <code>f</code>s until only one is left, then fails allowing the program to exit.</li>
+<li>On no match, <code>s/f./f/g</code> removes the first column and we try the match again. When no data remains, this substitution then removes <code>f</code>s until one is left, then fails allowing the program to exit.</li>
 </ul>
 </li>
 </ul>
