--- a/q/258992.html
+++ b/q/258992.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>136</td><td>Python 3</td><td>240830T025537Z</td><td><a href="https://codegolf.stackexchange.com/questions/258992/guessing-on-straws/275255#275255">Lucenapo</a></td></tr>
+<tr d-ix="0"><td>132</td><td>Python 3</td><td>240830T025537Z</td><td><a href="https://codegolf.stackexchange.com/questions/258992/guessing-on-straws/275255#275255">Lucenapo</a></td></tr>
 <tr d-ix="1"><td>066</td><td>JavaScript Node.js</td><td>240830T021439Z</td><td><a href="https://codegolf.stackexchange.com/questions/258992/guessing-on-straws/275253#275253">l4m2</a></td></tr>
 <tr d-ix="2"><td>213</td><td>Python3</td><td>240830T003510Z</td><td><a href="https://codegolf.stackexchange.com/questions/258992/guessing-on-straws/275250#275250">Ajax1234</a></td></tr>
 <tr d-ix="3"><td>020</td><td>SageMath</td><td>230415T064438Z</td><td><a href="https://codegolf.stackexchange.com/questions/258992/guessing-on-straws/260108#260108">138 Aspe</a></td></tr>
@@ -37,12 +37,12 @@
 <tr d-ix="8"><td>033</td><td>Charcoal</td><td>230309T230625Z</td><td><a href="https://codegolf.stackexchange.com/questions/258992/guessing-on-straws/259002#259002">Neil</a></td></tr>
 <tr d-ix="9"><td>022</td><td>Wolfram Language Mathematica</td><td>230309T190742Z</td><td><a href="https://codegolf.stackexchange.com/questions/258992/guessing-on-straws/258996#258996">ZaMoC</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>137</s> 136 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 132 bytes</h1>
 
-<pre class="lang-python prettyprint-override"><code>def f(a,b):N=len(a);a=sum(a,[]);b=sum(b,[]);p=[1];g=lambda x,y:x[1^x.index(y)];exec('p+=g(%c,p[-1]),;'*2%(97,98)*N);assert len({*p})-N-N
+<pre class="lang-python prettyprint-override"><code>def f(a,b):N=len(a);a=sum(a,[]);b=sum(b,[]);p=[1];g=lambda x,y:x[1^x.index(y)];exec('p+=g(%c,p[-1]),;'*2%(97,98)*N);1&lt;&lt;len({*p})-N-N
 </code></pre>
-<p><a href="https://tio.run/##jY7hasMgFIX/7ymEUarpzUBNm7TiK@QFxIFpTDdoU1k6MIw9e3YjpcuvsT@e6/3OORrG29u1l9PU@o501EHDDrU@@546ppwePi@4M5apJs1NmoM23KqTPrtL0zoSYTxEw1/jy3vf@khHZpWP/kjXYaNPdHWEYHJuGah1JlZ0X8K@YlmN/cPgP25kfu0rC98sr/N6eu6oMRyIsECMBFLMugOynbUEUlkLxlRA@N2QjMWvYWcte/pXCQfkGMUtwhJPCdWcvv9BPFyPRpFMxSKebovIkksU8QcvEpfIpx8" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p>Does nothing for single loops; raises an error for multiple loops.</p>
+<p><a href="https://tio.run/##jY3RasMwDEXf9xWGUWplysB21qR1/Qv5AeOB0zjdoE0NbcFh7Nszxy1LXwZ70ZV07pX8cPk49WIcW9eRjlpsYFOrg@upBWnV@XqMO21ANqlvUu@VZkbu1cEem9aSgMMmaPYeXj/71gU6gJEuuB1d@he1p4sdep0zAyiXGV/QdYnrCrIaJNtup09fmf@GvM7rsaNaMyTcINECSTHpCsnbpCWSyhjUukLC7oZkLGbDyhh4ev7XFYaRx2zcRljGKrCa4rc0/zXNF3kyFQ/xNM2RRyyi8L9xkbCIePwB" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>If it forms a loop, no error. Otherwise error</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 66 bytes</h1>
 
